Fixed the top image to be 100% width as it was causing the width scrollbar to appear

--- a/bootstrap-3.1.1-dist/css/stylesheet.css
+++ b/bootstrap-3.1.1-dist/css/stylesheet.css
@@ -10,6 +10,7 @@ body{
 #map {
   display: block;
   margin: 30px auto 30px auto;
+  width:100%;
   margin-left: auto;
   margin-right: auto;
   border-radius: 15px;
